--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="utf-8">
-  <title>منصة وسيط لخدمات التعميد</title>
+  <title>منصة العمل الحر | الرئيسية</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="منصة وسيط لخدمات التعميد">
+  <meta property="og:title" content="منصة العمل الحر | الرئيسية">
   <meta property="og:type" content="website">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
